# northroot

./: .changelog.toml  .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  CORE_INVARIANTS.md  Cargo.toml  Dockerfile  GOVERNANCE.md  LICENSE  Makefile  README.md  REFACTOR_PLAN.md  REFACTOR_SUMMARY.md  RELEASE_GUIDE.md  RELEASING.md  deny.toml  justfile  kernel-boundary.json  llms.txt  rust-toolchain.toml
.devcontainer/: README.md  devcontainer.json
.github/: BRANCH_PROTECTION.md  CODEOWNERS  RECEIPT_ARCHITECTURE.md  RECEIPT_INTEGRATION_PLAN.md  labeler.yml  signature-policy.yml
ADRs/: ADR-001-receipts-vs-engine.md  ADR-002-canonicalization-strategy.md  ADR-003-delta-compute-decisions.md  ADR-004-identity-root-commitment.md  ADR-005-engine-architecture.md  ADR-006-signature-verification-strategy.md  ADR-007-delta-compute-implementation.md  ADR-008-production-hardening-storage.md  ADR-009.md
DSL/: README.md
apps/northroot/: Cargo.toml  event.json
apps/northroot/src/: lib.rs  main.rs  object_store.rs  output.rs  path.rs  test_support.rs  workspace.rs
apps/northroot/src/commands/: append.rs  canonicalize.rs  connect.rs  event_id.rs  journal.rs  mod.rs  node.rs  primitives.rs  read.rs  record.rs  steward.rs  verify.rs  verify_bundle.rs  work.rs  workspace.rs
apps/northroot/tests/: github_repo_inspection.rs
capabilities/: README.md  index.public.json
crates/northroot-actor/: Cargo.toml
crates/northroot-actor/src/: lib.rs
crates/northroot-ag/: Cargo.toml
crates/northroot-ag/src/: lib.rs
crates/northroot-ag/tests/: end_to_end.rs
crates/northroot-clearlyops/: Cargo.toml
crates/northroot-clearlyops/src/: lib.rs
crates/northroot-clearlyops/tests/: end_to_end.rs
crates/northroot-core/: Cargo.toml
crates/northroot-core/src/: errors.rs  event_id.rs  events.rs  lib.rs  shared.rs  verification.rs
crates/northroot-core/tests/: verification.rs
crates/northroot-cost/: Cargo.toml
crates/northroot-cost/src/: lib.rs
crates/northroot-engine/: Cargo.toml  README.md
crates/northroot-engine/examples/: compute_merkle_roots.rs
crates/northroot-engine/src/: api.rs  cas.rs  commitments.rs  composition.rs  lib.rs  policy.rs  resolver.rs  rowmap.rs  serde_helpers.rs  shapes.rs  signature.rs
crates/northroot-engine/src/delta/: chunking.rs  data_shape.rs  decision.rs  manifest_root.rs  manifest_summary.rs  method_shape.rs  mod.rs  overlap.rs  pac.rs  reuse.rs
crates/northroot-engine/src/execution/: builder.rs  merkle_row_map.rs  mod.rs  state.rs
crates/northroot-engine/src/strategies/: incremental_sum.rs  mod.rs  partition.rs  registry.rs  trait_.rs
crates/northroot-engine/strategies/: README.md
crates/northroot-engine/tests/: generate_cbor_hashes.rs  test_cbor_vector_integrity.rs  test_commitments.rs  test_composition.rs  test_composition_vector_roundtrip.rs  test_delta.rs  test_drift_detection.rs  test_engine_vector_integrity.rs  test_execution.rs  test_execution_and_method.rs  test_integration.rs  test_phase4_spec.rs  test_phase_invariants.rs  test_policy.rs  test_signature.rs  test_strategies.rs
crates/northroot-event/: Cargo.toml
crates/northroot-event/src/: lib.rs
crates/northroot-execution/: Cargo.toml
crates/northroot-execution/src/: lib.rs
crates/northroot-governance/: Cargo.toml
crates/northroot-governance/src/: lib.rs
crates/northroot-journal/: Cargo.toml  README.md  events.nrj
crates/northroot-journal/src/: errors.rs  event.rs  frame.rs  lib.rs  reader.rs  verification.rs  writer.rs
crates/northroot-journal/tests/: integration.rs  resilience.rs  verification.rs
crates/northroot-obligation/: Cargo.toml
crates/northroot-obligation/src/: lib.rs
crates/northroot-ops/: Cargo.toml  README.md
crates/northroot-ops/src/: lib.rs
crates/northroot-policy/: Cargo.toml  README.md
crates/northroot-policy/src/: cost_model.rs  lib.rs  policy.rs  validation.rs
crates/northroot-policy/tests/: test_cost_model.rs  test_policy_loading.rs  test_validation.rs
crates/northroot-receipt/: Cargo.toml
crates/northroot-receipt/src/: lib.rs
crates/northroot-record/: Cargo.toml
crates/northroot-record/src/: id.rs  journal.rs  lib.rs  record.rs  validate.rs
crates/northroot-record/tests/: golden.rs
crates/northroot-record/tests/testdata/record-v0/: invalid-event-ref.json  invalid-method-ref.json  invalid-profile-id.json  invalid-timestamp.json  invalid-uppercase-id.json  valid-event.json
crates/northroot-state-eval/: Cargo.toml
crates/northroot-state-eval/src/: lib.rs
docs/: ADR_PLAYBOOK.md  CI_VECTOR_CHECKS.md  INDEX.md  INTEGRITY_CHECKS.md  PHASE_4_PREPARATION.md  QA_HARNESS.md  README.md  devcontainer.md  engine-0.1.0-analysis.md  k8s_security_minimum.md  secrets.md
examples/: PROOF_ANALYSIS.md
fixtures/: README.md
goals/: northroot-active.md
methods/: README.md
operators/: README.md  operator_v1.md
policies/: README.md
produce-opsivy-v0/: .gitignore  PAYLOAD_SHAPES.md  README.md  SETUP.md  VERSION.md  schema.sql
receipts/: Cargo.toml
schemas/: README.md
scripts/: README.md  benchmark_journal_formats.py  bump-version.sh  check-golden-vectors.sh  check-integrity.sh  check_worktree_sync.sh  codex_setup.sh  codex_verify.sh  coverage-diff.sh  dev_setup.sh  fetch_remote_refs.sh  generate-adr-index.py  generate-adr-index.sh  install-adr-hooks.sh  install-changelog-hook.sh  migrate-adrs.py  mutation-test.sh  release-check.sh  safe_sync_main.sh  update-changelog.sh  v01_readiness.py  validate-adrs.py  validate_capability_index.py  verify.sh  (+4 more)
sdk/python/northroot/: Cargo.toml  Makefile  QUICKSTART-DEV.md  README-DEV.md  README.md  RELEASE.md  pyproject.toml  requirements-dev.txt  setup-dev.sh
sdk/python/northroot/examples/: README.md  otel_integration.py  quickstart.py
sdk/python/northroot/northroot/: __init__.py
sdk/python/northroot/receipts_demo/receipts/: 0f41f3aa-7dc3-487a-8b7c-929ddb99a07c.json
sdk/python/northroot/src/: client.rs  errors.rs  lib.rs  receipts.rs
wip/store/: Cargo.toml  README.md
wip/store/src/: error.rs  journal.rs  lib.rs  traits.rs
(+423 files in other folders)
