[workspace]
members = [
  "crates/northroot-ag",
  "crates/northroot-canonical",
  "crates/northroot-exchange",
  "crates/northroot-execution",
  "crates/northroot-governance",
  "crates/northroot-journal",
  "crates/northroot-node",
  "crates/northroot-record",
  "crates/northroot-state-eval",
]
resolver = "2"
