[package]
name = "northroot-actor"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license.workspace = true
description = "Actor primitive for accountable Northroot work"

[dependencies]
northroot-core = { path = "../northroot-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
