[package]
name = "northroot-ag"
version = "0.1.0"
edition = "2021"
description = "Sanitized agricultural profile example over Northroot records."
license = "MIT"

[dependencies]
northroot-record = { path = "../northroot-record" }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
northroot-exchange = { path = "../northroot-exchange" }
northroot-execution = { path = "../northroot-execution" }
northroot-governance = { path = "../northroot-governance" }
northroot-journal = { path = "../northroot-journal" }
northroot-node = { path = "../northroot-node" }
northroot-record = { path = "../northroot-record" }
tempfile = "3.8"
