[package]
name = "northroot-core"
version = "0.1.0"
edition = "2021"
description = "Core event types, verification, and receipt structures for Northroot."
license = "MIT OR Apache-2.0"

[dependencies]
northroot-canonical = { path = "../northroot-canonical" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
sha2 = "0.10"
base64 = "0.22"
num-bigint = "0.4"

[dev-dependencies]
serde_json = "1.0"

