[package]
name = "northroot-core"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license.workspace = true
description = "Shared canonical hashing and validation helpers for Northroot primitives"

[dependencies]
hex = "0.4"
northroot-canonical = { path = "../northroot-canonical" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
