[package]
name = "northroot-cost"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license.workspace = true
description = "Cost attribution primitive for Northroot executions"

[dependencies]
northroot-core = { path = "../northroot-core" }
serde = { version = "1.0", features = ["derive"] }
