[package]
name = "northroot-execution"
version = "0.1.0"
edition = "2021"
description = "Execution method registry contracts over Northroot records."
license = "MIT"

[dependencies]
northroot-record = { path = "../northroot-record" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
serde_json = "1.0"
