[package]
name = "northroot-governance"
version = "0.1.0"
edition = "2021"
description = "Policy matching over Northroot records without core policy semantics."
license = "MIT"

[dependencies]
northroot-record = { path = "../northroot-record" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
