[package]
name = "northroot-record"
version = "0.1.0"
edition = "2021"
description = "Tiny Northroot record contract, validators, .nrj stream helpers, and canonical JSONL interchange segments."
license = "MIT"

[dependencies]
northroot-canonical = { path = "../northroot-canonical" }
northroot-journal = { path = "../northroot-journal" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.8"
