[package]
name = "northroot-state-eval"
version = "0.1.0"
edition = "2021"
authors = ["Northroot Contributors"]
license = "MIT"
description = "Product-agnostic projection and policy evaluation primitives for Northroot state."

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
