[package]
name = "northroot-store"
version = "0.1.0"
edition = "2021"
authors = ["Northroot Contributors"]
license = "Apache-2.0 OR MIT"
description = "Pluggable storage backend abstraction for Northroot events"

[dependencies]
serde_json = "1.0"
thiserror = "1.0"
northroot-journal = { path = "../northroot-journal" }
northroot-core = { path = "../northroot-core" }
northroot-canonical = { path = "../northroot-canonical" }

[dev-dependencies]
tempfile = "3.8"

